@@ -1,9 +1,9 @@
-C Fix\sfor\sthe\spreious\sfix:\sThe\sparent\snodes\sof\sthe\sroot\snodes\sof\sa\sforest\sdocument\shave\sto\sbe\sempty.
-D 2023-02-04T01:55:03.542
+C Added\sthe\soption\s-replace\sto\sthe\sdom\scommand\smethod\sclearString.
+D 2023-03-25T02:30:48.097
 F .fossil-settings/crlf-glob 3fc81610a0f32c43d5830d2e2b08d1a0cbfb74f5
 F .fossil-settings/ignore-glob bdfbbdd88f6c9099755206650cd164eb37aca373
 F .fossil-settings/manifest a09a968bf05a50058f3ad50132730b719bc39e76
-F CHANGES 98f32c36060daab75a46b488043edf6f8b076e0d585e8e45a809f3f2dcde9828
+F CHANGES 2939d64ff70687c038de136b055c35e3081cb94f10315ad8f86893103289e168
 F ChangeLog 9b60ec8bfbae84e4f1a97aaee24be00ccea212b7
 F LICENSE 7c00b00fe8e88c48498a54c103dd7df03faeeb039c783279d5fb54dfca307b77
 F MPL_2.0.html 326b847674d6f5846c5b260fb437372e21232c23e3911f3a94f766a62459126c
@@ -20,7 +20,7 @@ F doc/README 706bce83708ba3eb9a81452364ab445c79e63ace
 F doc/category-index.html b4a8d2a4b261d8380849b9fa2b4026f1e08248aab543551db47a34b60a43c69a
 F doc/dom.html 1d11385ca4813443eed963e0086bd477c0d11dadf3a0006c10116263f17597ad
 F doc/dom.n 362d1ac1b59c8d21d6155fa9a59cc91278e898791a5b7fc3325f97a559714ae2
-F doc/dom.xml 566521cc37eb4e8aa5ded41cf71ab00e85ede1b0f08b6fb990dbb8d8e9bd74c1
+F doc/dom.xml 1b603749e7dae850b28262f45d1ee6804305ce1f1eae2a268343d638f384f481
 F doc/domDoc.html 523b69a6128d8c42fa82ee69354b9eb73f14f6d2936e9c3d8aaf049980305644
 F doc/domDoc.n 587f1d733f6f9ba500e02380fd07f961f52a7ff04dc745aba267fb3e9fff1338
 F doc/domDoc.xml c15fb336498508c58f6c65144bdfb59f886c6867ea8359b891bbfd9f48efc684
@@ -127,8 +127,8 @@ F extensions/tnc/win/targets.vc 79dea1c6a94a94e6ed8bae9e0195149b25a69923
 F generic/aolstub.cpp 0a4cd5a84d820496ca10237e934b8b4ccac8f827
 F generic/datatypes.c 4a33e0c8de5fd1c20d1f549cc513af4b6e72c5c80b817f42c94d277cba8dec38
 F generic/datatypes.h 3e41d07bcf50cf6959b6e14416dfcb0d7b5aafc65683322978ec185c2a259332
-F generic/dom.c 9159e3d7590a8ca1a30a7a04877748aabfee0883d043318b3fb2977c30dacabd
-F generic/dom.h d925c1fe341902f264d907c557f8254dcc4ce7def46f81e637e7855a093e9ac4
+F generic/dom.c de53c48060eba6083dd32ae9053b629ec07e1276c8a4b718ee9446ca6f50fe32
+F generic/dom.h 7269dffe8e6fa73b05fa38316441a524a81dbca01c4813ebc06c7c4ac9c4d19b
 F generic/domalloc.c 7a6a2fdde25d04ffef0330259ceb781ffa2150c2314dd88784f924f6f331ef9e
 F generic/domalloc.h 961f83bb46dec27dbcf36ed430ed81b1f485a1fdfaa2f7df8b60bbcf861d0fe3
 F generic/domhtml.c 9eb48d936e674a307b5ac3ce6d5d812ac0804e58a9840e46cd323e89d6c88926
@@ -147,7 +147,7 @@ F generic/nodecmd.c e8b237d7069eee5a505e1d845de0974e0e533173ec0b39f278137f1a5574
 F generic/nodecmd.h 36056ca2c262cb1991cabef8d27992ad628db718d09ff0eeaeaffd150f1549ec
 F generic/schema.c 2a28faf2ac152e73bfdd926c91e3e06fbfc20aabb9de5113224466f8c2810aec
 F generic/schema.h 7d8c6ffbb3e99d9cb7636c66194a48e4311d1e3014a708d58f194bf44733a7f3
-F generic/tcldom.c 2989e2f62b261f549d75218d3f0fcdc55b6727fb2f18419fed790040274d444e
+F generic/tcldom.c af6ed3e7588ab4a8a0d450ade3dece0e83fe90e5b437a1af0193c9b3a8620d21
 F generic/tcldom.h fc61477bdd07440e17a8f11cc898e5c07c8c7c3592014213a5e50eca85393374
 F generic/tclexpat.c 05ee40449a59e3efb7bf400c34baab9910890f143aaf383a2f456c83eb5ca67a
 F generic/tclexpat.h 95d915d74bb4b99ef3b80de00b0adce28931e6015ac63226b99db4817d9e313c
@@ -196,7 +196,7 @@ F tests/data/xslt_1.xsl e96e4c1f0cd3467141815c97fe917333b09e8de9
 F tests/decls.test 06d0ba0cbc18e26a1524cb17a6ef9adf2a0fc864
 F tests/doctype.test 015c514bd8919467c1074dc3068a527abb3988b5
 F tests/dom.bench 5446ce379127b8d5700f18a5a0848e580313d0d7
-F tests/dom.test 6e67b6cad519f42ed2db52cb97b51933bb00f4c69b0854d0c3c84eddc280eb22
+F tests/dom.test 977013ae64036b90b585b1c2d574289b688afd2014145f08891e8ecd93006218
 F tests/domDoc.test 6dec2f6d9b4b3a2577af556cb2d49b152e8a34c518fb51a6dc5677229c077cbd
 F tests/domNode.bench 3d457513be7908bab88ac0e23e1864f7341e3090
 F tests/domNode.test 46d67b521a9d84d5d982340c545d830ce65be6e5c69e4271e613d2182b71a321
@@ -239,8 +239,8 @@ F xe/README 91626be10fa0b48c38184bb73b09eea074008fb082559eaf5c0fb8bb83997903
 F xe/xe 075a1f1c4a5758222c52a4688f9fe22dc3d925e366316cf50d84501c9ca3fdb1 x
 F xe/xe-input fb58cbefe5e3acceb9567a165ef7e655ad08b44e
 F xe/xe.bat 8622c5a70666a58d2316df568354c70593848098
-P 09226b62bd7468f9464777282dee48a9940e82f9f2b782c59e060b8514a75e9d
-R 6a9fc4a109f7de5cbc6381d1669e4023
+P 41026c0cbd959280cfcb3f72882c0047bb2d931f61a7ecb6849e96cdd17480c7
+R 825a3345a1395b8f3a34b757b113489c
 U rolf
-Z eb7f90d3c87dcd7e29fc21d2f645ba31
+Z 1d369b91b4052b3ecdf846f57a715db2
 # Remove this line to create a well-formed Fossil manifest.
